# photo_misc

./: .gitignore  CMakeLists.txt  run_gamess.sh
prep_inps/: in_preparer.cpp  in_preparer.h  test  test.cpp
source/: basis.cpp  basis.h  in_preparer.cpp  in_preparer.h  main.cpp  test.cpp
source/h/: main.cpp
source/h2/: main.cpp
source/he/: main.cpp
